--- a/complete-to-do/package.json
+++ b/complete-to-do/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-todo",
+  "name": "complete-to-do",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
